--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
     url: /publications/
 
   - title: "Service"
-    url: /talks/      
+    url: /service/      
     
   - title: "CV"
     url: /cv/
